--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
-
+####################################################################################################|
+#
+#                                            LOCAL
+#
+###   POSTGRES   ######   POSTGRES   ######   POSTGRES   ######   POSTGRES   ######   POSTGRES   ###|
+#
+#  
+####################################################################################################|
+## Propiedades de la BD con su coneccion y Driver
+spring.datasource.url=jdbc:postgresql://10.1.105.205:5432/metrogas
+spring.datasource.username=postgres
+spring.datasource.password=Metrogas2022
+####
+##### Propiedades de Hibernate
+##### El dialecto SQL hace que Hibernate genere un mejor SQL para la base de datos elegida
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
+####
+##### Hibernate auto ddl (crear, crear-soltar, validar, actualizar)
+##### Si la Tablas no existe (update) si ya existe ponemos (none)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+#####################################################################################################|
