Setting up Entities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 #  
 ####################################################################################################|
 ## Propiedades de la BD con su coneccion y Driver
-spring.datasource.url=jdbc:postgresql://10.1.105.205:5432/metrogas
+spring.datasource.url=jdbc:postgresql://10.1.105.205:5432/smallenter
 spring.datasource.username=postgres
 spring.datasource.password=Metrogas2022
 ####
