Setting up Controllers. Normalizing code of Entities to nomenclature.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,9 @@
 #  
 ####################################################################################################|
 ## Propiedades de la BD con su coneccion y Driver
-#spring.datasource.url=jdbc:postgresql://10.1.105.205:5432/smallenter
 spring.datasource.url=jdbc:postgresql://localhost:5432/smallenter
 spring.datasource.username=postgres
-#spring.datasource.password=Metrog@s2022
-spring.datasource.password=rsaldanar
+spring.datasource.password=Metrogas2022
 ####
 ##### Propiedades de Hibernate
 ##### El dialecto SQL hace que Hibernate genere un mejor SQL para la base de datos elegida
